// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/process/sort sortBranches() sorts based on prPriority 1`] = `
Array [
  Object {
    "matchUpdateTypes": Array [
      "major",
    ],
    "prPriority": 1,
    "prTitle": "some major update",
  },
  Object {
    "matchUpdateTypes": Array [
      "pin",
    ],
    "prPriority": 0,
    "prTitle": "some other pin",
  },
  Object {
    "matchUpdateTypes": Array [
      "pin",
    ],
    "prPriority": -1,
    "prTitle": "some pin",
  },
  Object {
    "matchUpdateTypes": Array [
      "minor",
    ],
    "prPriority": -1,
    "prTitle": "a minor update",
  },
]
`;

exports[`workers/repository/process/sort sortBranches() sorts based on updateType and prTitle 1`] = `
Array [
  Object {
    "matchUpdateTypes": Array [
      "pin",
    ],
    "prTitle": "some other pin",
  },
  Object {
    "matchUpdateTypes": Array [
      "pin",
    ],
    "prTitle": "some pin",
  },
  Object {
    "matchUpdateTypes": Array [
      "minor",
    ],
    "prTitle": "a minor update",
  },
  Object {
    "matchUpdateTypes": Array [
      "major",
    ],
    "prTitle": "some major update",
  },
]
`;
